Increase image size and fix Tools alignment

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ section {
 }
 
 .home-img {
-    width: 45vw;
+    width: 50vw;
     background-image: url('images/pfp-removebg-preview.png');
     background-size: cover;
     background-position: center;
@@ -235,7 +235,7 @@ span {
 .tools-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 1.5rem;
 }
 
@@ -260,7 +260,7 @@ span {
 }
 
 .about-img {
-    width: 45vw;
+    width: 50vw;
     background-image: url('images/pfp-removebg-preview.png');
     background-size: cover;
     background-position: center;
